update category
