# controllers/category.controller.js
@@ -2,7 +2,9 @@ import expressAsyncHandler from "express-async-handler";
 import {
     dbCreateCategory,
     dbFindAllCategory,
+    dbFindCategoryById,
     dbFindCategoryByName,
+    dbUpdateCategory,
 } from "../db/cateogory.queries.js";
 import { ROLES } from "../utils/constants.js";
 
@@ -20,10 +22,8 @@ const getAllCategory = expressAsyncHandler(async (req, res) => {
 
 const createCategory = expressAsyncHandler(async (req, res) => {
     // #swagger.tags = ['Category']
-
-    const { categoryName, description } = req.body;
-
     // Create new category
+    const { categoryName, description } = req.body;
     if (
         req.authData.role != ROLES.adminRole &&
         req.authData.role != ROLES.staffRole
@@ -60,4 +60,59 @@ const createCategory = expressAsyncHandler(async (req, res) => {
     });
 });
 
-export { getAllCategory, createCategory };
+const updateCategory = expressAsyncHandler(async (req, res) => {
+    // #swagger.tags = ['Category']
+    // Update new category
+    const { categoryName, description } = req.body;
+    const { id } = req.params;
+
+    if (
+        req.authData.role != ROLES.adminRole &&
+        req.authData.role != ROLES.staffRole
+    ) {
+        return res.status(403).json({
+            success: false,
+            error: {
+                message: "Unauthorize operation",
+            },
+        });
+    }
+
+    // Find Category
+    const category = await dbFindCategoryById(id);
+    if (!category) {
+        return res.status(404).json({
+            success: false,
+            error: {
+                message: "Category not found",
+            },
+        });
+    }
+
+    // Check duplicate category
+    const existingCategory = await dbFindCategoryByName(categoryName);
+    if (existingCategory && existingCategory.id !== id) {
+        return res.status(409).json({
+            success: false,
+            error: {
+                message: "A category with this name already exists",
+            },
+        });
+    }
+
+    const updatedCategory = await dbUpdateCategory(
+        id,
+        categoryName,
+        description,
+        req.authData.username
+    );
+
+    return res.status(200).json({
+        success: true,
+        data: {
+            message: `Category ${updatedCategory.categoryName} has been successfully updated`,
+        },
+    });
+});
+
+export { getAllCategory, createCategory, updateCategory };
